test/e2e/testdata/load_balancing_endpoint_override.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: endpoint-override-header-lb-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: endpoint-override-header-lb-route
  loadBalancer:
    type: RoundRobin
    endpointOverride:
      extractFrom:
        - header: "x-custom-host"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: endpoint-override-header-lb-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: lb-backend-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /endpoint-override-header
      backendRefs:
        - name: lb-backend
          port: 8080
